--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,13 @@
 [postgres]
 host = "localhost"
 port = 5432
-database = "amazonmart"
+dbname = "amazonmart"
 user = "postgres"
 password = "Hephzibah@1414"
+
+# [postgres]
+# host = "localhost"
+# port = 5432
+# dbname = "amazonmart"
+# user = "postgres"
+# password = "Hephzibah@1414"
