--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,8 +1,9 @@
-[postgres]
+[connections.postgresql]
+dialect = "postgresql"
 host = "localhost"
-port = 5432
-dbname = "amazonmart"
-user = "postgres"
+port = "5432"
+database = "amazonmart"
+username = "postgres"
 password = "Hephzibah@1414"
 
 # [postgres]
