--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,14 +1,6 @@
-[connections.postgresql]
-dialect = "postgresql"
-host = "localhost"
-port = "5432"
-database = "amazonmart"
-username = "postgres"
+[supabase]
+host = "db.fbkriebmhjectmlyrems.supabase.co"
+port = 5432
+database = "postgres"
+user = "postgres"
 password = "Hephzibah@1414"
-
-# [postgres]
-# host = "localhost"
-# port = 5432
-# dbname = "amazonmart"
-# user = "postgres"
-# password = "Hephzibah@1414"
