--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,7 @@
 [supabase]
-host = "db.fbkriebmhjectmlyrems.supabase.co"
+host = "aws-0-eu-west-2.pooler.supabase.com"
 port = 5432
 database = "postgres"
-user = "postgres"
+user = "postgres.fbkriebmhjectmlyrems"
 password = "Hephzibah@1414"
+pool_mode = "session"
